--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "path": "^0.12.7",
+    "tsconfig-paths": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
