--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
+    "knex": "^2.4.2",
     "openai": "^3.1.0",
     "path": "^0.12.7",
+    "sqlite3": "^5.1.4",
     "tsconfig-paths": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/sqlite3": "^3.1.8",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
