--- a/src/appConfig.json
+++ b/src/appConfig.json
@@ -1,14 +1,46 @@
 {
+    "logging": true,
+    "enable_debug_log": false,
+    "discord_bots": [
+        "Optonnani",
+        "NanaAI"
+    ],
     "ai_models": {
+        "optonnani": {
+            "model": "gpt-4",
+            "name": "Optonnani",
+            "symbol_to_replace": "",
+            "symbol_replacements": []
+        },
+        "nanaai": {
+            "model": "gpt-4",
+            "name": "NanaAI",
+            "symbol_to_replace": "",
+            "symbol_replacements": []
+        },
         "midjourney_prompt_creator": {
-            "model": "MidJourney_Prompt_Creator",
+            "model": "gpt-3.5-turbo",
+            "name": "MidJourney_Prompt_Creator",
             "symbol_to_replace": "###",
             "symbol_replacements": [
                 "Kawasaki H2 SX SE, a sleek and sporty looking motorcycle that has a distinctive design"
             ]
         },
         "can_i_ride": {
-            "model": "Can_I_Ride",
+            "model": "gpt-3.5-turbo",
+            "name": "Can_I_Ride",
+            "symbol_to_replace": "",
+            "symbol_replacements": []
+        },
+        "prompt_improver": {
+            "name": "Prompt_Improver",
+            "model": "gpt-4",
+            "symbol_to_replace": "",
+            "symbol_replacements": []
+        },
+        "ai_hr_paper_helper": {
+            "name": "AI_HR_Paper_Helper",
+            "model": "gpt-4",
             "symbol_to_replace": "",
             "symbol_replacements": []
         }
