--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "AI_NAME=Prompt_Improver nodemon index.js",
+    "start": "nodemon index.js",
     "start:midjourney_creator": "AI_NAME=MidJourney_Prompt_Creator nodemon index.js",
     "start:prompt_improver": "AI_NAME=Prompt_Improver nodemon index.js",
     "start:sex_advisor": "AI_NAME=Sex_Advisor nodemon index.js"
@@ -23,11 +23,13 @@
   "homepage": "https://github.com/AroenvR/fact-or-fiction#readme",
   "dependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/dompurify": "^3.0.0",
     "@types/fs-extra": "^11.0.1",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "discord.js": "^14.7.1",
+    "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
