--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "ES6",
-      "module": "commonjs",
+      "module": "esnext",
       "lib": ["es6"],
       "allowJs": true,
       "jsx": "react",
